fixes bug in about page content wrapping

--- a/themes/Spring-University/sass/_about.scss
+++ b/themes/Spring-University/sass/_about.scss
@@ -98,8 +98,8 @@
   }
 
   .about-company p {
-    width: 50rem;
-  }
+        padding-left: 150px;
+        padding-right: 150px;  }
 
   .browse-button {
     width: 30%;
